--- a/src/partials/main-page/header.html
+++ b/src/partials/main-page/header.html
@@ -2,11 +2,11 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+        <p>hello</p>
       </li>
 
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <p>hello world</p>
       </li>
     </ul>
   </nav>
