--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -11,28 +11,22 @@
             <swiper-slide>
                 <ul class="slider-list">
                     <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
                 </ul>
             </swiper-slide>
             <swiper-slide>
                 <ul class="slider-list">
                     <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
                 </ul>
             </swiper-slide>
             <swiper-slide>
                 <ul class="slider-list">
                     <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt="">
-                    </li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
                 </ul>
             </swiper-slide>
         </swiper-container>
