--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -7,26 +7,45 @@
         </p>
         <button class="hero-button" id="js-hero-button" type="button">Order now</button>
         <swiper-container class="mySwiper swip-cont" pagination="true" pagination-clickable="true" navigation="false"
-            space-between="30" centered-slides="true" autoplay-delay="5000" autoplay-disable-on-interaction="false">
+            space-between="50" centered-slides="true" autoplay-delay="50000" autoplay-disable-on-interaction="false"
+            loop="true">
             <swiper-slide>
                 <ul class="slider-list">
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img1"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img2"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img3"></div>
+                    </li>
                 </ul>
             </swiper-slide>
             <swiper-slide>
                 <ul class="slider-list">
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img1"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img2"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img3"></div>
+                    </li>
                 </ul>
             </swiper-slide>
             <swiper-slide>
                 <ul class="slider-list">
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/IMG_9893 1.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
-                    <li class="slider-item"><img class="slider-image" src="/partials/img/pizza picture.jpg" alt=""></li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img1"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img2"></div>
+                    </li>
+                    <li class="slider-item">
+                        <div class="slider-container-img img3"></div>
+                    </li>
                 </ul>
             </swiper-slide>
         </swiper-container>
