--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,3 +1,8 @@
+
+.btn{
+
+}
+
 .order-now {
   min-width: 127px;
   min-height: 45px;
@@ -14,3 +19,98 @@
   border: 1px solid #9BB537;
 
 }
+
+.order-now :hover,
+.order-now :focus{
+    border-color: 9BB537;
+    color: F8F8F8;
+}
+
+
+.All-categories{
+    min-width: 174px;
+    min-height: 50px;
+    padding: 14px 28px;
+  
+    font-family: Inter;
+    color: rgba(5, 5, 5, 0.5);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  
+    border-radius: 15px;
+    border: 1px solid #9BB537;
+
+}
+
+.All-categories :hover,
+.All-categories :focus{
+    border-color: 9BB537;
+    color: F8F8F8;
+}
+
+
+.Add-to-favorite{
+    min-width: 156px;
+    min-height: 45px;
+    padding: 14px 28px;
+  
+    font-family: Inter;
+    color: F8F8F8;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border-color: 9BB537;
+  
+    border-radius: 15px;
+    border: 1px solid #9BB537;
+}
+
+.Add-to-favorite :hover,
+.Add-to-favorite :focus{
+    color: #050505;  
+}
+
+
+.See-recipe{
+    min-width: 93px;
+    min-height: 31px;
+    padding: 8px 16px;
+
+    color: #F8F8F8;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+
+    border-radius: 15px;
+    border: 1px solid #9BB537;
+    border-color: 9BB537;
+}
+
+
+.Send{
+
+    min-width: 360px;
+    min-height: 48px;
+    padding: 14px 162px;
+
+    color: #F8F8F8;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+
+    border-radius: 15px;
+    border: 1px solid #9BB537;
+    border-color: 9BB537;
+}
+
+
+
