--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,12 @@
-<header class="header">
-    <div class="header-container header-flex">
+<header class="header-container">
+    <div class="header-flex">
         <nav class="nav-menu">
             <ul class="menu-list list">
-                <li class="menu-item"><a href="">Home</a></li>
-                <li class="menu-item"><a href=""></a>Favorites</li>
+                <li class="menu-item"><a href="../index.html" class="header-link">Home</a></li>
+                <li class="menu-item"><a href="../favorites.html" class="header-link">Favorites</a></li>
             </ul>
         </nav>
-        <a href="" class="logo">
+        <a href="../index.html" class="logo">
             <span class="logo-color">tasty</span>treats.
         </a>
         <div class="buttons">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="mob-menu js-menu-container">
+    <div class="mob-menu  js-menu-container">
         <button type="button" class="close-menu-btn js-close-menu">
             <svg class="close-icon" width="32px" height="32px">
                 <use href="../img/sprite/icons.svg#icon-close-x"></use>
@@ -31,14 +31,9 @@
         </button>
         <nav class="mob-menu-nav">
             <ul class="mob-menu-list list">
-                <li class="mob-menu-item"><a href="">Home</a></li>
-                <li class="mob-menu-item"><a href="">Favorites</a></li>
+                <li class="mob-menu-item"><a href="../index.html">Home</a></li>
+                <li class="mob-menu-item"><a href="../index.html">Favorites</a></li>
             </ul>
         </nav>
-        <button class="switcher-btn">
-            <svg class="switcher-icon" width="46px" height="20px">
-                <use href="../img/sprite/icons.svg#icon-sun"></use>
-            </svg>
-        </button>
     </div>
 </header>
