--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -1,4 +1,4 @@
-<div class="category-container ">
+<div class="category-container container">
   <button class="all-categories active-all">All categories</button>
   <div class="categories categories-block">
     <ul class="category-list">
