--- a/src/partials/main-page/popular.html
+++ b/src/partials/main-page/popular.html
@@ -1,4 +1,4 @@
-<div class="popular-recipes">
+<div class="popular-recipes container">
     <h2 class="popular-recipes-title">Popular recipes</h2>
     <div class="popular-recipes-container">
       <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fc1">
