--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -1,10 +1,10 @@
-.container {
+/* .container {
   min-width: 320px;
   max-width: 375px;
   padding: 0 20px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 /* Карточка з рецептом */
 .resipes-card {
   position: relative;
