--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,10 +13,11 @@
 /* COMPONENTS */
 @import url("./components/container.css");
 @import url("./components/button.css");
+@import url("./base/common.css");
 
 
 /* FONTS */
-@import url("./fonts/fonts.css");
+@import url("./fonts-face/fonts.css");
 
 
 /* LAYOUT */
