--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header-container">
-    <div class="header-flex">
+<header>
+    <div class="container header-flex">
         <nav class="nav-menu">
             <ul class="menu-list list">
                 <li class="menu-item"><a href="../index.html" class="header-link">Home</a></li>
@@ -22,8 +22,8 @@
             </button>
         </div>
     </div>
-
-    <div class="mob-menu  js-menu-container">
+<div class="backdrop is-hidden">
+    <div class="mob-menu container js-menu-container">
         <button type="button" class="close-menu-btn js-close-menu">
             <svg class="close-icon" width="32px" height="32px">
                 <use href="../img/sprite/icons.svg#icon-close-x"></use>
@@ -32,8 +32,9 @@
         <nav class="mob-menu-nav">
             <ul class="mob-menu-list list">
                 <li class="mob-menu-item"><a href="../index.html">Home</a></li>
-                <li class="mob-menu-item"><a href="../index.html">Favorites</a></li>
+                <li class="mob-menu-item"><a href="../favorites.html">Favorites</a></li>
             </ul>
         </nav>
     </div>
+</div>
 </header>
