--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,11 +10,11 @@
             <span class="logo-color">tasty</span>treats.
         </a>
         <div class="buttons">
-            <button type="button" class="basket-btn">
+            <a href="tel:+38073000000" class="basket-btn" >
                 <svg class="basket-icon" width="24px" height="24px">
                     <use href="../img/sprite/icons.svg#icon-cart"></use>
                 </svg>
-            </button>
+            </a>
             <button type="button" class="burger-btn js-open-menu">
                 <svg class="burger-icon" width="32px" height="32px">
                     <use href="../img/sprite/icons.svg#icon-hamburger"></use>
