--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,5 +1,5 @@
 :root{
-    --transition-dur-and-func:transform 250ms ease-in-out;
+    --transition-dur-and-func:transform 500ms ease-in-out;
 }
 
 .is-hidden {
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 15px;
+    padding-top: 20px;
 }
 
 .basket-btn{
@@ -25,6 +25,7 @@
     border: none;
     background-color: transparent;
     padding: 0;
+
 }
 
 .basket-icon{
@@ -156,6 +157,10 @@
 
 @media screen and (min-width:768px) {
 
+    .header-flex{
+        padding-top: 28px;
+    }
+
     .burger-btn{
         display: none;
     }
@@ -201,3 +206,8 @@
     }
 }
 
+@media screen and (min-width:1280px){
+    .header-flex {
+            padding-top: 40px;
+        }
+}
