--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,116 +1,124 @@
-
-.btn{
-
-}
-
-.order-now {
-  min-width: 127px;
-  min-height: 45px;
-  padding: 14px 28px;
-
-  font-family: Inter;
-  color: #050505;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  border-radius: 15px;
-  border: 1px solid #9BB537;
-
-}
-
-.order-now :hover,
-.order-now :focus{
-    border-color: 9BB537;
-    color: F8F8F8;
-}
-
-
-.all-categories{
+.btn {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    font-family: Inter, sans-serif;
+    border-radius: 15px;
+    transition: all 0.5s;
+  }
+  
+  .order-now {
+    min-width: 127px;
+    min-height: 45px;
+    padding: 14px 28px;
+    color: #050505;
+    border: 1px solid #9bb537;
+  }
+  
+  @media (hover: hover) {
+    .order-now:hover,
+    .order-now:focus {
+      background-color: #9bb537;
+      color: #f8f8f8;
+    }
+  }
+  
+  @media not (hover: hover) {
+    .order-now:active {
+      background-color: #9bb537;
+      color: #f8f8f8;
+    }
+  }
+  
+  .all-categories {
     min-width: 174px;
     min-height: 50px;
     padding: 14px 28px;
-  
-    font-family: Inter;
     color: rgba(5, 5, 5, 0.5);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    border: 1px solid rgba(5, 5, 5, 0.2);
+  }
   
-    border-radius: 15px;
-    border: 1px solid #9BB537;
-
-}
-
-.all-categories :hover,
-.all-categories :focus{
-    border-color: 9BB537;
-    color: F8F8F8;
-}
-
-
-.add-to-favorite{
+  @media (hover: hover) {
+    .all-categories:hover,
+    .all-categories:focus {
+      background-color: #9bb537;
+      color: #f8f8f8;
+    }
+  }
+  
+  @media not (hover: hover) {
+    .all-categories:active {
+      background-color: #9bb537;
+      color: #f8f8f8;
+    }
+  }
+  
+  .add-to-favorite {
     min-width: 156px;
     min-height: 45px;
     padding: 14px 28px;
+    color: #f8f8f8;
+    background-color: #9bb537;
+    border: 1px solid #9bb537;
+  }
   
-    font-family: Inter;
-    color: F8F8F8;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    border-color: 9BB537;
+  @media (hover: hover) {
+    .add-to-favorite:hover,
+    .add-to-favorite:focus {
+      color: #050505;
+    }
+  }
   
-    border-radius: 15px;
-    border: 1px solid #9BB537;
-}
-
-.add-to-favorite :hover,
-.add-to-favorite :focus{
-    color: #050505;  
-}
-
-
-.see-recipe{
+  @media not (hover: hover) {
+    .add-to-favorite:active {
+      color: #050505;
+    }
+  }
+  .see-recipe {
     min-width: 93px;
     min-height: 31px;
     padding: 8px 16px;
-
-    color: #F8F8F8;
-    font-family: Inter;
+    color: #f8f8f8;
     font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-
-
-    border-radius: 15px;
-    border: 1px solid #9BB537;
-    border-color: 9BB537;
-}
-
-
-.send{
-
+    border-radius: 8px;
+    border: 1px solid #9bb537;
+    background-color: #9bb537;
+  }
+  
+  @media (hover: hover) {
+    .see-recipe:hover,
+    .see-recipe:focus {
+      color: #050505;
+    }
+  }
+  
+  @media not (hover: hover) {
+    .see-recipe:active {
+      color: #050505;
+    }
+  }
+  
+  .send {
     min-width: 360px;
     min-height: 48px;
     padding: 14px 162px;
-
-    color: #F8F8F8;
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-
-
-    border-radius: 15px;
-    border: 1px solid #9BB537;
-    border-color: 9BB537;
-}
-
-
-
+    color: #f8f8f8;
+    border: 1px solid #9bb537;
+    background-color: #9bb537;
+  }
+  
+  @media (hover: hover) {
+    .send:hover,
+    .send:focus {
+      color: #050505;
+    }
+  }
+  
+  @media not (hover: hover) {
+      .send:active {
+      color: #050505;
+    }
+  }
+  
+  
