--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,22 +2,22 @@
     <div class="container header-flex">
         <nav class="nav-menu">
             <ul class="menu-list list">
-                <li class="menu-item"><a href="../index.html" class="header-link">Home</a></li>
-                <li class="menu-item"><a href="../favorites.html" class="header-link">Favorites</a></li>
+                <li class="menu-item"><a href="index.html" class="header-link">Home</a></li>
+                <li class="menu-item"><a href="favorites.html" class="header-link">Favorites</a></li>
             </ul>
         </nav>
-        <a href="../index.html" class="logo">
+        <a href="./index.html" class="logo">
             <span class="logo-color">tasty</span>treats.
         </a>
         <div class="buttons">
             <a href="tel:+38073000000" class="basket-btn" >
                 <svg class="basket-icon" width="24px" height="24px">
-                    <use href="../img/sprite/icons.svg#icon-cart"></use>
+                    <use href="img/sprite/icons.svg#icon-cart"></use>
                 </svg>
             </a>
             <button type="button" class="burger-btn js-open-menu">
                 <svg class="burger-icon" width="32px" height="32px">
-                    <use href="../img/sprite/icons.svg#icon-hamburger"></use>
+                    <use href="img/sprite/icons.svg#icon-hamburger"></use>
                 </svg>
             </button>
         </div>
@@ -26,13 +26,13 @@
     <div class="mob-menu container js-menu-container">
         <button type="button" class="close-menu-btn js-close-menu">
             <svg class="close-icon" width="32px" height="32px">
-                <use href="../img/sprite/icons.svg#icon-close-x"></use>
+                <use href="img/sprite/icons.svg#icon-close-x"></use>
             </svg>
         </button>
         <nav class="mob-menu-nav">
             <ul class="mob-menu-list list">
-                <li class="mob-menu-item"><a href="../index.html">Home</a></li>
-                <li class="mob-menu-item"><a href="../favorites.html">Favorites</a></li>
+                <li class="mob-menu-item"><a href="index.html">Home</a></li>
+                <li class="mob-menu-item"><a href="favorites.html">Favorites</a></li>
             </ul>
         </nav>
     </div>
