--- a/src/css/fonts-face/fonts.css
+++ b/src/css/fonts-face/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Bold.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Bold.woff2') format('woff2'),
         url('Inter-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-ExtraBold.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-ExtraBold.woff2') format('woff2'),
         url('Inter-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
@@ -18,7 +18,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Black.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Black.woff2') format('woff2'),
         url('Inter-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
@@ -27,7 +27,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Light.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Light.woff2') format('woff2'),
         url('Inter-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
@@ -36,7 +36,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-ExtraLight.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-ExtraLight.woff2') format('woff2'),
         url('Inter-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
@@ -45,7 +45,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Regular.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Regular.woff2') format('woff2'),
         url('Inter-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -54,7 +54,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-SemiBold.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-SemiBold.woff2') format('woff2'),
         url('Inter-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
@@ -63,7 +63,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Thin.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Thin.woff2') format('woff2'),
         url('Inter-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
@@ -72,7 +72,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Medium.woff2') format('woff2'),
+    src: url('../all-fonts/Inter-Medium.woff2') format('woff2'),
         url('Inter-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
