raw-cards-markup

--- a/src/partials/main-page/cards.html
+++ b/src/partials/main-page/cards.html
@@ -1,8 +1,8 @@
 <section class="resipes">
   <div class="container">
-    <div class="resipes-card">
+    <div class="cards-container-js">
+    <!-- <div class="resipes-card">
       <img src="img/images/test-resipes.png" alt="" />
-
       <div class="card-description">
         <button class="like-btn" type="button">
           <svg class="like-logo liked" width="22" height="22">
@@ -48,6 +48,7 @@
           <button class="btn-see-recipe" type="button">See recipe</button>
         </div>
       </div>
+    </div> -->
     </div>
   </div>
 </section>
