--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -1,10 +1,19 @@
+<link rel="stylesheet" href="/src/css/components/button.css" />
+
 <div class="category-container container">
-  <button class="all-categories active-all">All categories</button>
+<load
+src="partials/components/button.html"
+btn-class="all-categories"
+btn-type="button"
+btn-text="All categories"
+ />
+
+  <!--<button class="all-categories active-all">All categories</button>-->
   <div class="categories categories-block">
     <ul class="category-list">
-     <li><button class="category-button">Beef</button></li>
-     <li><button class="category-button">Breakfast</button></li>
+     
       <!-- Категорії будуть додані за допомогою JavaScript -->
     </ul>
+    <div class="nav-scroller"></div>
   </div>
 </div>
