--- a/src/css/layout/main-page/categories.css
+++ b/src/css/layout/main-page/categories.css
@@ -27,6 +27,7 @@ button {
     max-height: 198px;
     overflow: hidden;
     overflow-y: auto;}
+    
   
 @media only screen and (min-width: 680px) {
     .categories-block{
@@ -70,5 +71,20 @@ button {
 }
   
 
+.categories-block::-webkit-scrollbar {
+  width: 8px;
+  height: 201px;
+  border-radius: 12px;
   
+}
 
+.categories-block::-webkit-scrollbar-track {
+  background-color: #F8F8F8;;
+}
+.categories-block::-webkit-scrollbar-thumb {
+  background: rgba(5, 5, 5, 0.18);
+  border-radius: 12px;
+}
+.categories-block::-webkit-scrollbar-thumb:hover {
+  background-color: #9bb537;
+}
