--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -1,10 +1,127 @@
-/* .container {
-  min-width: 320px;
-  max-width: 375px;
-  padding: 0 20px;
-  margin-left: auto;
-  margin-right: auto;
-} */
+/* Пошук */
+.search {
+  display: flex;
+  flex-wrap: wrap;
+}
+.search-label {
+  user-select: none;
+  display: block;
+  margin-bottom: 8px;
+
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+
+  color: #05050580;
+}
+.search-wrapper {
+  position: relative;
+  width: 335px;
+
+  margin-bottom: 14px;
+}
+.search-field {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 48px;
+  width: 100%;
+  height: 46px;
+  color: #050505;
+  border-radius: 15px;
+  outline: none;
+  border: 1px solid #05050533;
+}
+.search-field::placeholder {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: #05050580;
+}
+.search-field:focus {
+  border: 1px solid #9bb537;
+}
+
+.search-button {
+  position: absolute;
+  top: 14px;
+  left: 18px;
+}
+.search-field-icon {
+  fill: #05050580;
+}
+.search-field:focus + .search-button .search-field-icon {
+  fill: #9bb537;
+}
+.time-wrapper {
+  margin-bottom: 14px;
+  margin-right: 14px;
+  width: 160px;
+}
+.select {
+  width: 100%;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+
+  outline: none;
+  /* color: #050505; */
+
+  border: 1px solid #05050533;
+  border-radius: 15px;
+
+  padding: 14px 18px;
+}
+
+/*time select відкриваюча шторка*/
+.ss-main {
+  color: #050505;
+}
+
+.ss-main.ss-open-below {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.ss-content.ss-open-below {
+  height: 124px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.ss-content .ss-list .ss-option {
+  color: #0505054d;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  /* padding: 0; */
+}
+/* Ховер селекта */
+.ss-content .ss-list .ss-option:hover {
+  color: #0505054d;
+  background-color: transparent;
+}
+/* При натисканні обирається колір */
+.ss-content .ss-list .ss-option.ss-highlighted,
+.ss-content .ss-list .ss-option:not(.ss-disabled).ss-selected {
+  background-color: transparent;
+}
+.ss-content .ss-list .ss-option:not(:last-child) {
+  padding-bottom: 8px;
+}
+.ss-content .ss-list .ss-option:not(.ss-disabled).ss-selected {
+  color: #050505;
+}
+
+/* area search */
+.area-wrapper {
+  width: 160px;
+}
+
+/* Пошук інгрідієнтів*/
+.ingredients-wrapper {
+  width: 188px;
+  margin-bottom: 14px;
+}
 /* Карточка з рецептом */
 .resipes-card {
   position: relative;
