--- a/src/partials/main-page/cards.html
+++ b/src/partials/main-page/cards.html
@@ -1,5 +1,64 @@
-<section class="resipes">
+
   <div class="container">
+    <div class="search">
+      <label class="search-label" for="search"> Search</label>
+      <div class="search-wrapper">
+        <input
+          class="search-field"
+          type="text"
+          name="user-search"
+          id="search"
+          placeholder="Enter Text"
+        />
+        <button class="search-button" type="submit">
+          <svg class="search-field-icon" width="18" height="18">
+            <use href="img/sprite/icons.svg#icon-search"></use>
+          </svg>
+        </button>
+      </div>
+
+      <label class="time-wrapper" >
+        <span class="search-label">Time</span>
+      <select class="time-select select js-time-select" name="time" >
+        <option  data-placeholder="true"></option>
+        <option value="10">10 min</option>
+
+        <option value="20">20 min</option>
+        <option value="30">30 min</option>
+        <option value="40">40 min</option>
+      </select>
+     </label>
+      
+     <label class="area-wrapper" >
+      <span class="search-label">Area</span>
+      <select class="area-select select js-area-select" name="area" >
+        <option  data-placeholder="true"></option>
+        <option value="Italian">Italian</option>
+        <option value="Spamish">Spamish</option>
+        <option value="French">French</option>
+        <option value="Ukramian">Ukramian</option>
+      </select>
+      </label>
+
+      <label class="ingredients-wrapper" >
+      <span class="search-label">Ingredients</span>
+      <select class="ingredients-select select js-ingredients-select" name="ingredients" >
+        <option  data-placeholder="true"></option>
+        <option value="Cabbage">Cabbage</option>
+        <option value="Cucumber">Cucumber</option>
+        <option value="Tomato">Tomato</option>
+        <option value="Corn">Corn</option>
+        <option value="Radish">Radish</option>
+        <option value="Parsley">Parsley</option>
+
+      </select>
+      </label>
+      <div><button class="button-reset" type="submit">
+          <svg class="reset-icon" width="16" height="16">
+            <use href="img/sprite/icons.svg#icon-search"></use>
+          </svg>
+        </button></div>
+</div>
     <div class="resipes-card">
       <img src="img/images/test-resipes.png" alt="" />
 
