get запит + відмальовка розмітки через оы

--- a/src/partials/main-page/popular.html
+++ b/src/partials/main-page/popular.html
@@ -1,7 +1,7 @@
 <div class="popular-recipes container">
     <h2 class="popular-recipes-title">Popular recipes</h2>
     <div class="popular-recipes-container">
-      <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fc1">
+      <!-- <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fc1">
         <picture>
           <source srcset="https://www.themealdb.com/images/media/meals/tqtywx1468317395.jpg" type="image/webp">
           <source srcset="https://www.themealdb.com/images/media/meals/tqtywx1468317395.jpg" type="image/jpeg">
@@ -12,39 +12,7 @@
           <p class="popular-recipes-text">A French dessert consisting of layers of chocolate sponge cake and chocolate ganache, typically topped with chocolate glaze and chocolate decorations.</p>
         </div>
       </div>
-    <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fbc">
-        <picture>
-          <source srcset="https://www.themealdb.com/images/media/meals/sxxpst1468569714.jpg" type="image/webp">
-          <source srcset="https://www.themealdb.com/images/media/meals/sxxpst1468569714.jpg" type="image/jpeg">
-          <img src="https://www.themealdb.com/images/media/meals/sxxpst1468569714.jpg" alt="Irish stew" loading="lazy" class="popular-recipes-img" width="64px" height="64px">
-        </picture>
-        <div class="popular-recipes-info-wrap">
-          <h3 class="popular-recipes-subtitle">Irish stew</h3>
-          <p class="popular-recipes-text">A traditional Irish dish made with lamb, potatoes, carrots, onions, and herbs, cooked in a broth or gravy.</p>
-        </div>
-    </div>
-    <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fb8">
-      <picture>
-        <source srcset="https://www.themealdb.com/images/media/meals/wvqpwt1468339226.jpg" type="image/webp">
-        <source srcset="https://www.themealdb.com/images/media/meals/wvqpwt1468339226.jpg" type="image/jpeg">
-        <img src="https://www.themealdb.com/images/media/meals/wvqpwt1468339226.jpg" alt="Mediterranean Pasta Salad" loading="lazy" class="popular-recipes-img" width="64px" height="64px">
-      </picture>
-      <div class="popular-recipes-info-wrap">
-        <h3 class="popular-recipes-subtitle">Mediterranean Pasta Salad</h3>
-        <p class="popular-recipes-text">A salad made with pasta, vegetables (such as tomatoes, cucumbers, and olives), feta cheese, and a dressing made with olive oil and lemon juice.</p>
-      </div>
-    </div>
-    <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28898040">
-      <picture>
-        <source srcset="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg" type="image/webp">
-        <source srcset="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg" type="image/jpeg">
-        <img src="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg" alt="Burek" loading="lazy" class="popular-recipes-img" width="64px" height="64px">
-      </picture>
-      <div class="popular-recipes-info-wrap">
-        <h3 class="popular-recipes-subtitle">Burek</h3>
-        <p class="popular-recipes-text">Burek is a traditional Balkan pastry made with phyllo dough and a savory filling, usually of meat, cheese, or vegetables. It's a popular street food in the region and can be enjoyed as a snack or a meal.</p>
-      </div>
-    </div>
+    </div> -->
     
     </div>
   </div>
