--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -13,7 +13,7 @@ btn-text="All categories"
 
   <!--<button class="all-categories active-all">All categories</button>-->
   <div class="categories categories-block">
-    <ul class="category-list">
+    <ul class="category-list category-list-js">
      
       <!-- Категорії будуть додані за допомогою JavaScript -->
     </ul>
