--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -6,51 +6,19 @@
             TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.
         </p>
         <button class="hero-button" id="js-hero-button" type="button">Order now</button>
-        <swiper-container class="mySwiper swip-cont" pagination="true" pagination-clickable="true" navigation="false"
-            space-between="50" centered-slides="true" autoplay-delay="50000" autoplay-disable-on-interaction="false"
-            loop="true">
-            <swiper-slide>
-                <ul class="slider-list">
-                    <li class="slider-item">
-                        <div class="slider-container-img img1"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img2"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img3"></div>
-                    </li>
-                </ul>
-            </swiper-slide>
-            <swiper-slide>
-                <ul class="slider-list">
-                    <li class="slider-item">
-                        <div class="slider-container-img img1"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img2"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img3"></div>
-                    </li>
-                </ul>
-            </swiper-slide>
-            <swiper-slide>
-                <ul class="slider-list">
-                    <li class="slider-item">
-                        <div class="slider-container-img img1"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img2"></div>
-                    </li>
-                    <li class="slider-item">
-                        <div class="slider-container-img img3"></div>
-                    </li>
-                </ul>
-            </swiper-slide>
-        </swiper-container>
+        !-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper"></div>
 
-        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+        </div>
 
     </div>
 </section>
