--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,8 @@
 
 @import url('./layout/main-page/cards.css');
 
+@import url('./layout/main-page/see-recipe.css');
+
 /* favorites-page */
 @import url('./layout/header.css');
 
