додав модальне вікно
Залишились лише дрібні нюанси по стилю та з анімацією появи

--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -5,7 +5,7 @@
         <p class="hero-paragraph">
             TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.
         </p>
-        <button class="hero-button" id="js-hero-button" type="button">Order now</button>
+        <button class="hero-button" id="openModalBtn" type="button">Order now</button>
         <swiper-container class="mySwiper swip-cont" pagination="true" pagination-clickable="true" navigation="false"
             space-between="50" centered-slides="true" autoplay-delay="50000" autoplay-disable-on-interaction="false"
             loop="true">
