--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -6,19 +6,14 @@
             TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.
         </p>
         <button class="hero-button" id="js-hero-button" type="button">Order now</button>
-        !-- Slider main container -->
         <div class="swiper">
-            <!-- Additional required wrapper -->
             <div class="swiper-wrapper"></div>
-
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
             <div class="swiper-pagination"></div>
-            <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
         </div>
 
     </div>
 </section>
+
+
+<div class="slide-second-img" style="background-image: url();"></div>
