--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -125,7 +125,7 @@
 /* Карточка з рецептом */
 .resipes-card {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 
   width: 335px;
   height: 335px;
