--- a/src/css/layout/main-page/hero.css
+++ b/src/css/layout/main-page/hero.css
@@ -14,6 +14,7 @@
   font-weight: 500;
   line-height: normal;
   margin-bottom: 48px;
+  transition: 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 .hero-button:hover,
@@ -54,6 +55,13 @@
   line-height: 1.28;
 }
 
+.swiper {
+  margin-bottom: 80px;
+}
+
+.swiper-wrapper {
+  padding-bottom: 24px;
+}
 .swiper-content {
   display: flex;
   flex-direction: row;
@@ -63,6 +71,7 @@
 .slide-first-img {
   height: 280px;
   width: 80px;
+  margin-left: 25px;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -92,9 +101,6 @@
   margin-bottom: 20px;
   margin-top: 50px;
   display: block;
-}
-.swiper-wrapper {
-  padding-bottom: 24px;
 }
 
 .slide-third-img {
@@ -140,4 +146,9 @@ span.swiper-pagination-bullet-active {
   width: 4px;
   height: 4px;
   background: #9bb537;
+}
+
+/* TABLET 768px */
+
+@media screen {
 }
