Add adaptive, connect section popular, categories,cards

--- a/src/partials/main-page/cards.html
+++ b/src/partials/main-page/cards.html
@@ -1,8 +1,8 @@
-
-  <div class="container">
-    <div class="search">
-      <label class="search-label" for="search"> Search</label>
-      <div class="search-wrapper">
+<div class="container-recipes">
+  <!-- <div class="search">
+      <label class="search-wrapper" >
+        <span class="search-label">Search</span> 
+        <div class="search-thumb">
         <input
           class="search-field"
           type="text"
@@ -15,7 +15,9 @@
             <use href="img/sprite/icons.svg#icon-search"></use>
           </svg>
         </button>
-      </div>
+        </div>
+      </label>
+      
 
       <label class="time-wrapper" >
         <span class="search-label">Time</span>
@@ -53,16 +55,21 @@
 
       </select>
       </label>
-      <div><button class="button-reset" type="submit">
-          <svg class="reset-icon" width="16" height="16">
-            <use href="img/sprite/icons.svg#icon-search"></use>
-          </svg>
-        </button></div>
+      
 </div>
-    <div class="resipes-card">
-    <div class="cards-container-js">
-    <!-- <div class="resipes-card">
-      <img src="img/images/test-resipes.png" alt="" />
+   <div class="wrapper-reset">
+  <button class="button-reset" type="submit">
+    <svg class="reset-icon" width="16" height="16">
+      <use href="img/sprite/icons.svg#icon-close-x"></use>
+     <span class="reset-text">Reset the filter</span>
+   </button>
+  </div> -->
+
+  <ul class="cards-list cards-container-js"></ul>
+</div>
+<!-- <li class="recipes-card" 
+
+ <img class="recipes-img" src="img/images/test-resipes.png" alt="" />
       <div class="card-description">
         <button class="like-btn" type="button">
           <svg class="like-logo liked" width="22" height="22">
@@ -107,8 +114,9 @@
           </div>
           <button class="btn-see-recipe" type="button">See recipe</button>
         </div>
-      </div>
-    </div> -->
-    </div>
-  </div>
-</section>
+      </div>  
+
+</li> 
+ </ul>  -->
+
+<!-- </section> -->
