--- a/src/partials/main-page/popular.html
+++ b/src/partials/main-page/popular.html
@@ -1,7 +1,7 @@
-<div class="popular-recipes container">
-    <h2 class="popular-recipes-title">Popular recipes</h2>
-    <div class="popular-recipes-container">
-      <!-- <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fc1">
+<div class="popular-recipes">
+  <h2 class="popular-recipes-title">Popular recipes</h2>
+  <div class="popular-recipes-container">
+    <!-- <div class="popular-recipes-wrap" data-id="6462a8f74c3d0ddd28897fc1">
         <picture>
           <source srcset="https://www.themealdb.com/images/media/meals/tqtywx1468317395.jpg" type="image/webp">
           <source srcset="https://www.themealdb.com/images/media/meals/tqtywx1468317395.jpg" type="image/jpeg">
@@ -13,6 +13,5 @@
         </div>
       </div>
     </div> -->
-    
-    </div>
   </div>
+</div>
