--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -1,9 +1,9 @@
-<div class="category-container container">
+<div class="category-container">
   <button class="all-categories active-all">All categories</button>
   <div class="categories categories-block">
     <ul class="category-list">
-     <li><button class="category-button">Beef</button></li>
-     <li><button class="category-button">Breakfast</button></li>
+      <li><button class="category-button">Beef</button></li>
+      <li><button class="category-button">Breakfast</button></li>
       <!-- Категорії будуть додані за допомогою JavaScript -->
     </ul>
   </div>
