Fix card, fix filters

--- a/src/partials/main-page/filters.html
+++ b/src/partials/main-page/filters.html
@@ -1,6 +1,7 @@
 <div class="search">
-      <label class="search-wrapper" >
-        <span class="search-label">Search</span> 
+      <label class="search-wrapper label-positin" >
+        <span class="search-label">Search</span>
+        
         <div class="search-thumb">
         <input
           class="search-field"
@@ -18,7 +19,7 @@
       </label>
       
 
-      <label class="time-wrapper" >
+      <label class="time-wrapper label-positin" >
         <span class="search-label">Time</span>
       <select class="time-select select js-time-select" name="time" >
         <option  data-placeholder="true"></option>
@@ -30,7 +31,7 @@
       </select>
      </label>
       
-     <label class="area-wrapper" >
+     <label class="area-wrapper label-positin" >
       <span class="search-label">Area</span>
       <select class="area-select select js-area-select" name="area" >
         <option  data-placeholder="true"></option>
@@ -41,7 +42,7 @@
       </select>
       </label>
 
-      <label class="ingredients-wrapper" >
+      <label class="ingredients-wrapper label-positin" >
       <span class="search-label">Ingredients</span>
       <select class="ingredients-select select js-ingredients-select" name="ingredients" >
         <option  data-placeholder="true"></option>
