--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -62,31 +62,50 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-
+  position: absolute;
+  top: -22px;
   color: #05050580;
+}
+@media screen and (min-width: 768px) {
+  .search-label {
+    top: -26px;
+  }
 }
 .search-thumb {
   position: relative;
 }
-.search-wrapper {
-  width: 335px;
 
-  margin-bottom: 14px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .search-wrapper {
+    width: 335px;
+
+    margin-bottom: 36px;
+  }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .search-wrapper {
     width: 278px;
+    margin-bottom: 42px;
   }
+}
+.label-positin {
+  position: relative;
 }
 .search-field {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-left: 48px;
+  /* padding-left: 48px; */
+  padding: 14px 14px 14px 48px;
   width: 100%;
   height: 46px;
   color: #050505;
   border-radius: 15px;
   outline: none;
   border: 1px solid #05050533;
+}
+@media screen and (min-width: 768px) {
+  .search-field {
+    height: 48px;
+  }
 }
 .search-field::placeholder {
   font-weight: 500;
@@ -97,6 +116,7 @@
 }
 .search-field:focus {
   border: 1px solid #9bb537;
+  box-shadow: 0 0 5px #9bb537;
 }
 
 .search-button {
@@ -110,11 +130,15 @@
 .search-field:focus + .search-button .search-field-icon {
   fill: #9bb537;
 }
-.time-wrapper {
-  margin-bottom: 14px;
-  margin-right: 14px;
-  width: 160px;
+
+@media screen and (max-width: 767px) {
+  .time-wrapper {
+    margin-bottom: 36px;
+    margin-right: 14px;
+    width: 160px;
+  }
 }
+
 @media screen and (min-width: 768px) {
   .time-wrapper {
     width: 125px;
@@ -134,14 +158,22 @@
   border: 1px solid #05050533;
   border-radius: 15px;
 
-  padding: 14px 18px;
+  padding: 12px 18px;
+}
+@media screen and (min-width: 768px) {
+  .select {
+    height: 48px;
+  }
 }
 
 /*time select відкриваюча шторка*/
 .ss-main {
   color: #050505;
 }
-
+.ss-main:focus {
+  border: 1px solid #9bb537;
+  box-shadow: 0 0 5px #9bb537;
+}
 .ss-main.ss-open-below {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -151,6 +183,20 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
+.ss-content.ss-open-below.area-select,
+.ss-content.ss-open-below.ingredients-select {
+  height: 176px;
+}
+@media screen and (min-width: 768px) {
+  .ss-content.ss-open-below {
+    height: 128px;
+  }
+  .ss-content.ss-open-below.area-select,
+  .ss-content.ss-open-below.ingredients-select {
+    height: 188px;
+  }
+}
+
 .ss-content .ss-list .ss-option {
   color: #0505054d;
   font-size: 14px;
@@ -234,7 +280,7 @@
 }
 .recipes-card {
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 
   /* width: 335px;
   height: 335px; */
@@ -253,6 +299,7 @@
     height: 287px;
   }
 }
+
 .card-img {
   position: relative;
   overflow: hidden;
@@ -260,6 +307,11 @@
 .recipes-img {
   object-fit: cover;
   height: 100%;
+  background-color: linear-gradient(
+    0.94deg,
+    rgba(5, 5, 5, 0.6) 4.82%,
+    rgba(5, 5, 5, 0) 108.72%
+  );
 }
 /* .recipes-img {
   object-fit: cover;
@@ -282,6 +334,14 @@
   right: 0;
   padding-left: 16px;
   padding-top: 16px;
+
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    0.94deg,
+    rgba(5, 5, 5, 0.6) 4.82%,
+    rgba(5, 5, 5, 0) 108.72%
+  );
 }
 
 .like-btn {
@@ -323,7 +383,7 @@
     margin-bottom: 8px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .card-heading {
     margin-top: 150px;
     margin-bottom: 8px;
@@ -382,8 +442,7 @@
 }
 
 .reting-item {
-  fill: #f8f8f8;
-  opacity: 0.1;
+  fill: #f8f8f81a;
 }
 .reting-item.filled {
   fill: #eea10c;
